--- a/tmux.conf
+++ b/tmux.conf
@@ -99,16 +99,12 @@ set -g status-justify centre
 setw -g mode-keys vi
 
 # VIM COPY N PASTE
-set -g default-command "reattach-to-user-namespace -l /bin/bash"
-#bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+#set -g default-command "reattach-to-user-namespace -l /bin/bash"
+set-option -g default-command "which reattach-to-user-namespace >/dev/null && reattach-to-user-namespace -l bash || bash"
 
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
-
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
