--- a/tmux.conf
+++ b/tmux.conf
@@ -51,29 +51,20 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # set the status line's colors
-set -g status-fg white
-set -g status-bg black
+set -g status-style fg=white,bg=black
 
 # set the color of the window list
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-style fg=cyan,bg=default,dim
 
 # set colors for the active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=white,bg=red,bright
 
 # pane colors
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+set -g pane-border-style fg=green,bg=black
+set -g pane-active-border-style fg=white,bg=yellow
 
 # Command / message line
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white,bg=black,bright
 
 # Status line left side
 set -g status-left-length 40
@@ -101,8 +92,8 @@ setw -g mode-keys vi
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
+# bind-key -T vi-copy v begin-selection
 #bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
+# unbind -T vi-copy Enter
 #bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
